<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources xmlns:its="http://www.w3.org/2005/11/its" its:version="1.0">
    <!-- MyApplication -->
    <string name="app_name">My Application</string>

    <!-- General -->
    <string name="ok">OK</string>
    <string name="done">Done</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="error">Error</string>
    <string name="individual">Individual</string>
    <string name="edit">Edit</string>
    <string name="required">Required</string>
    <string name="no_content">No Content</string>

    <!-- Navigation Drawer -->
    <string name="drawer_main">Main</string>
    <string name="drawer_my_library">My Library</string>
    <string name="drawer_store">Store</string>

    <string name="drawer_help">Help &amp; Feedback</string>
    <string name="drawer_settings">Settings</string>

    <!-- The description that will show up in the search settings for this source. -->
    <string name="search_no_results">No Results</string>
    <plurals name="search_results">
        <item quantity="one">%1$d result for \"%2$s\": </item>
        <item quantity="other">%1$d results for \"%2$s\": </item>
    </plurals>

    <!-- Menus -->
    <!-- Common Menu -->
    <string name="menu_search">Search</string>
    <string name="menu_search_hint">Search Individuals</string>
    <string name="menu_help">Help &amp; Feedback</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_lib_licenses">Licenses</string>

    <!-- Preferences -->
    <string name="pref_title">Settings</string>
    <string name="pref_category_general">General</string>
    <string name="pref_enable_something">Enable Something</string>
    <string name="pref_enable_something_summary">Some summary</string>

    <!-- Individual -->
    <string name="delete_individual_confirm">Are you sure you want to delete this individual?</string>
    <string name="defaultProfileUrl">https://edge.ldscdn.org/mobile/interview/06.png</string>

    <!-- About -->
    <string name="about_title">@string/app_name</string>
    <string name="about_for">for Android</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="birth_date">Birth Date</string>
    <string name="alarm_time">Alarm Time</string>
    <string name="combined_date_time">Combined Date and Time</string>

    <string name="notification_channel_general">General Notifications</string>
</resources>
