<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingLeft="10dp"
              android:paddingTop="10dp">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/firstNameLayout"
        style="@style/TextInputLayout">

        <EditText
            android:id="@+id/firstNameEditText"
            style="@style/EditText"
            android:hint="@string/first_name"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout style="@style/TextInputLayout">

        <EditText
            android:id="@+id/lastNameEditText"
            style="@style/EditText"
            android:hint="@string/last_name"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout style="@style/TextInputLayout">

        <EditText
            android:id="@+id/phoneEditText"
            style="@style/EditText"
            android:hint="@string/phone"
            android:inputType="phone"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout style="@style/TextInputLayout">

        <EditText
            android:id="@+id/emailEditText"
            style="@style/EditText"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout style="@style/TextInputLayout">

        <EditText
            android:id="@+id/birthDateEditText"
            style="@style/EditText"
            android:focusableInTouchMode="false"
            android:hint="@string/birth_date"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout style="@style/TextInputLayout"
                                                   android:id="@+id/alarmTimeLayout">
        <EditText
            android:id="@+id/alarmTimeEditText"
            style="@style/EditText"
            android:focusableInTouchMode="false"
            android:hint="@string/alarm_time"
            />
    </android.support.design.widget.TextInputLayout>

</LinearLayout>
