<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:actionBarCompat="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_item_search"
        android:title="@string/menu_search"
        android:icon="@drawable/ic_action_search"
        android:queryHint="Search Individuals"
        actionBarCompat:showAsAction="ifRoom|collapseActionView"
        actionBarCompat:actionViewClass="android.support.v7.widget.SearchView"
    />
    <group android:id="@+id/menu_group_core"> <!-- don't let these items disappear when the drawer is open -->
        <item
            android:id="@+id/menu_item_settings"
            android:title="@string/menu_settings"
            android:icon="@drawable/ic_action_settings"
            />
        <item
            android:id="@+id/menu_item_about"
            android:title="@string/menu_about"
            android:icon="@drawable/ic_action_about"
            />
    </group>
</menu>