<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
    >

    <include
        android:id="@+id/appbar"
        layout="@layout/toolbar_actionbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/firstNameLayout"
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/firstNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name"
                    android:imeOptions="flagNoExtractUi"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/lastNameLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="@+id/firstNameLayout"
                app:layout_constraintEnd_toEndOf="@+id/firstNameLayout"
                app:layout_constraintTop_toBottomOf="@+id/firstNameLayout">

                <EditText
                    android:id="@+id/lastNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_name"
                    android:imeOptions="flagNoExtractUi"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/phoneLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="@+id/lastNameLayout"
                app:layout_constraintEnd_toEndOf="@+id/lastNameLayout"
                app:layout_constraintTop_toBottomOf="@+id/lastNameLayout">

                <EditText
                    android:id="@+id/phoneEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone"
                    android:imeOptions="flagNoExtractUi"
                    android:inputType="phone"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/emailLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="@+id/phoneLayout"
                app:layout_constraintEnd_toEndOf="@+id/phoneLayout"
                app:layout_constraintTop_toBottomOf="@+id/phoneLayout"
                >

                <EditText
                    android:id="@+id/emailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:imeOptions="flagNoExtractUi"
                    android:inputType="textEmailAddress"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/birthDateLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="@+id/emailLayout"
                app:layout_constraintEnd_toEndOf="@+id/emailLayout"
                app:layout_constraintTop_toBottomOf="@+id/emailLayout"
                >

                <EditText
                    android:id="@+id/birthDateEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/birth_date"
                    android:imeOptions="flagNoExtractUi"
                    android:inputType="date"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/alarmTimeLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="@+id/birthDateLayout"
                app:layout_constraintEnd_toEndOf="@+id/birthDateLayout"
                app:layout_constraintTop_toBottomOf="@+id/birthDateLayout"
                >

                <EditText
                    android:id="@+id/alarmTimeEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/alarm_time"
                    android:imeOptions="flagNoExtractUi"/>
            </android.support.design.widget.TextInputLayout>

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</LinearLayout>