<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:layout_editor_absoluteY="25dp"
    tools:layout_editor_absoluteX="0dp">

    <android.support.v7.widget.Toolbar
        android:id="@+id/mainToolBar"
        style="@style/MainToolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        tools:text="Jeff Campbell"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/mainToolBar" />

    <TextView
        android:id="@+id/phoneTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        tools:text="801-555-1234"
        app:layout_constraintLeft_toLeftOf="@+id/nameTextView"
        android:layout_marginLeft="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/nameTextView" />

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        tools:text="bob@bob.com"
        app:layout_constraintLeft_toLeftOf="@+id/phoneTextView"
        android:layout_marginLeft="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/phoneTextView" />


    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:text="@string/birth_date"
        android:id="@+id/linearLayout3"
        app:layout_constraintLeft_toLeftOf="@+id/emailTextView"
        android:layout_marginLeft="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/emailTextView" />

    <TextView
        android:id="@+id/birthDateTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        tools:text="1/1/70"
        app:layout_constraintLeft_toLeftOf="@+id/linearLayout3"
        android:layout_marginLeft="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />


    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:text="@string/alarm_time"
        app:layout_constraintLeft_toLeftOf="@+id/birthDateTextView"
        android:layout_marginLeft="0dp"
        android:id="@+id/textView"
        android:layout_marginStart="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/birthDateTextView" />

    <TextView
        android:id="@+id/alarmTimeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        tools:text="12:00 PM"
        tools:layout_conversion_absoluteX="10dp"
        tools:layout_conversion_absoluteY="151dp"
        tools:layout_conversion_absoluteWidth="84dp"
        tools:layout_conversion_absoluteHeight="24dp"
        app:layout_constraintLeft_toLeftOf="@+id/textView"
        android:layout_marginLeft="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:text="@string/combined_date_time"
        tools:layout_conversion_absoluteX="10dp"
        tools:layout_conversion_absoluteY="183dp"
        tools:layout_conversion_absoluteWidth="159dp"
        tools:layout_conversion_absoluteHeight="14dp"
        app:layout_constraintLeft_toLeftOf="@+id/alarmTimeTextView"
        android:layout_marginLeft="0dp"
        android:id="@+id/textView2"
        android:layout_marginStart="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/alarmTimeTextView" />

    <TextView
        android:id="@+id/sampleDateTimeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        tools:text="1/1/70 12:00 PM"
        tools:layout_conversion_absoluteX="10dp"
        tools:layout_conversion_absoluteY="197dp"
        tools:layout_conversion_absoluteWidth="150dp"
        tools:layout_conversion_absoluteHeight="24dp"
        app:layout_constraintLeft_toLeftOf="@+id/textView2"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:layout_marginStart="0dp" />

</android.support.constraint.ConstraintLayout>
